# scrapy_example

./: pyproject.toml
whiskyscraper/whiskyscraper/: middlewares.py  settings.py
whiskyscraper/whiskyscraper/spiders/: whisky.py
